# ai-engineering

./: .gitignore  pyproject.toml
phase-1/apis-and-keys/code/: verify-api-key.py
phase-1/apis-and-keys/docs/: api-keeys-best-practice.md
phase-1/data-samples-mgmt/code/: data-split.py  download-model.py  load-dataset.py
phase-1/data-samples-mgmt/doc/: data-mgmt.md
phase-1/dev-env-setup/: cpu-gpu-benchmark.py  verify-gpu.py  verify.py
phase-1/dev-env-setup/doc/: dev-env.md
phase-1/feature-engineering/code/: binning.py  feature-engg-one-hot-1.py  feature-engg-one-hot.py  word2vect-sample.py
phase-1/feature-engineering/doc/: doc.md
phase-1/git-commands/doc/: git-commands.md
phase-2/k-means/code/: kmean-irisflower-data.py  kmean-sample.py
phase-2/k-means/doc/: doc.md
